--- a/export.html
+++ b/export.html
@@ -131,12 +131,245 @@
         "stroke_color": "#0088ff",
         "waypoints": []
       }
+    },
+    "728c3cb26ad84e7085ff9cbfca4024ba": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.0.0",
+      "state": {
+        "height": "100%",
+        "width": "100%"
+      }
+    },
+    "5e4e377772e54d5089e42be54887f4ba": {
+      "model_name": "PlainmapModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "_dom_classes": [],
+        "configuration": {
+          "api_key": "AIzaSyC3YTChJ9BafI70SDU4ZBcOcLvYumnSKW8"
+        },
+        "data_bounds": [
+          [
+            40.759011,
+            -73.98447220000003
+          ],
+          [
+            40.8075355,
+            -73.96257270000001
+          ]
+        ],
+        "initial_viewport": {
+          "type": "DATA_BOUNDS"
+        },
+        "layers": [
+          "IPY_MODEL_961b7dfdb38f47ea96af7957e84feb9b"
+        ],
+        "layout": "IPY_MODEL_728c3cb26ad84e7085ff9cbfca4024ba"
+      }
+    },
+    "45f30e532d98421ebc6305e801058f5e": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.0.0",
+      "state": {}
+    },
+    "238fa2aacbb944b99201a0170082df22": {
+      "model_name": "ToolbarModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "_dom_classes": [],
+        "layer_controls": [],
+        "layout": "IPY_MODEL_45f30e532d98421ebc6305e801058f5e"
+      }
+    },
+    "8822250f9a1c4148857944c34bd839e0": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.0.0",
+      "state": {}
+    },
+    "cc66a16df389483f9c9dd475a87194ea": {
+      "model_name": "ErrorsBoxModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "_dom_classes": [],
+        "errors": [],
+        "layout": "IPY_MODEL_8822250f9a1c4148857944c34bd839e0"
+      }
+    },
+    "9ed2bb28a2d641c8ab08811fc76ef29f": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.0.0",
+      "state": {
+        "height": "420px"
+      }
+    },
+    "fa29962581d74481b94687edfaff3564": {
+      "model_name": "FigureModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "_dom_classes": [],
+        "_errors_box": "IPY_MODEL_cc66a16df389483f9c9dd475a87194ea",
+        "_map": "IPY_MODEL_5e4e377772e54d5089e42be54887f4ba",
+        "_toolbar": "IPY_MODEL_238fa2aacbb944b99201a0170082df22",
+        "layout": "IPY_MODEL_9ed2bb28a2d641c8ab08811fc76ef29f"
+      }
+    },
+    "961b7dfdb38f47ea96af7957e84feb9b": {
+      "model_name": "DirectionsLayerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "data_bounds": [
+          [
+            40.759011,
+            -73.9844722
+          ],
+          [
+            40.8075355,
+            -73.9625727
+          ]
+        ],
+        "end": [
+          40.759011,
+          -73.9844722
+        ],
+        "start": [
+          40.8075355,
+          -73.9625727
+        ],
+        "stroke_color": "#0088ff",
+        "waypoints": []
+      }
+    },
+    "f20929c563f64b5a94ad23015c0d7cf8": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.0.0",
+      "state": {
+        "height": "100%",
+        "width": "100%"
+      }
+    },
+    "b2981525be88403a9c51a21f7cb8d6a0": {
+      "model_name": "PlainmapModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "_dom_classes": [],
+        "configuration": {
+          "api_key": "AIzaSyC3YTChJ9BafI70SDU4ZBcOcLvYumnSKW8"
+        },
+        "data_bounds": [
+          [
+            40.759011,
+            -73.98447220000003
+          ],
+          [
+            40.8075355,
+            -73.96257270000001
+          ]
+        ],
+        "initial_viewport": {
+          "type": "DATA_BOUNDS"
+        },
+        "layers": [
+          "IPY_MODEL_74305776b0d54145887c65b91ca85e29"
+        ],
+        "layout": "IPY_MODEL_f20929c563f64b5a94ad23015c0d7cf8"
+      }
+    },
+    "aa3c182d566c4c2ead61968e5a691e92": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.0.0",
+      "state": {}
+    },
+    "41b818ca5ef34ad7952049d7222cfa0c": {
+      "model_name": "ToolbarModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "_dom_classes": [],
+        "layer_controls": [],
+        "layout": "IPY_MODEL_aa3c182d566c4c2ead61968e5a691e92"
+      }
+    },
+    "040e01bfcee740e58414b9b743b4f18e": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.0.0",
+      "state": {}
+    },
+    "eb64213882aa48b8ae6624dc1425a8a5": {
+      "model_name": "ErrorsBoxModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "_dom_classes": [],
+        "errors": [],
+        "layout": "IPY_MODEL_040e01bfcee740e58414b9b743b4f18e"
+      }
+    },
+    "dbd9f6de16c647009b27d510a4638667": {
+      "model_name": "LayoutModel",
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.0.0",
+      "state": {
+        "height": "420px"
+      }
+    },
+    "a2bd5e4a2f554fff9c035a50160798cc": {
+      "model_name": "FigureModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "_dom_classes": [],
+        "_errors_box": "IPY_MODEL_eb64213882aa48b8ae6624dc1425a8a5",
+        "_map": "IPY_MODEL_b2981525be88403a9c51a21f7cb8d6a0",
+        "_toolbar": "IPY_MODEL_41b818ca5ef34ad7952049d7222cfa0c",
+        "layout": "IPY_MODEL_dbd9f6de16c647009b27d510a4638667"
+      }
+    },
+    "74305776b0d54145887c65b91ca85e29": {
+      "model_name": "DirectionsLayerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "data_bounds": [
+          [
+            40.759011,
+            -73.9844722
+          ],
+          [
+            40.8075355,
+            -73.9625727
+          ]
+        ],
+        "end": [
+          40.759011,
+          -73.9844722
+        ],
+        "start": [
+          40.8075355,
+          -73.9625727
+        ],
+        "stroke_color": "#0088ff",
+        "travel_mode": "BICYCLING",
+        "waypoints": []
+      }
     }
   }
 }
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
-{"version_major": 2, "version_minor": 0, "model_id": "62f2d22355b1481b95c9549667f5a464"}
+{"version_major": 2, "version_minor": 0, "model_id": "a2bd5e4a2f554fff9c035a50160798cc"}
 </script>
 
 </body>
