--- a/export.html
+++ b/export.html
@@ -16,7 +16,40 @@
   "version_major": 2,
   "version_minor": 0,
   "state": {
-    "8e6d61f2dff546a0accf2e316c3d2811": {
+    "1a68b1dcdadd4216a78816fab2828242": {
+      "model_name": "MarkerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "display_info_box": true,
+        "info_box_content": "\n    <dl>\n    <dt>Event Name</dt><dd>rangers' choice: fire making skills</dd>\n    <dt>Event Borough</dt>Queens</dd>\n    <dt>Event Location</dt>Alley Pond Park: Alley Springfield BBQ Area Pink   </dd>\n    <dt>Event Type</dt>Special Event</dd>\n    <dt>Event Borough</dt>Queens</dd>\n    <dt>Event Start</dt>Sun Dec 16 18:00:00 2018</dd>\n    <dt>Event End</dt>Sun Dec 16 19:30:00 2018</dd>\n    </dl>\n    ",
+        "location": [
+          40.74239470000001,
+          -73.73843409999999
+        ]
+      }
+    },
+    "87e802bf70084003b2971cafff5f6846": {
+      "model_name": "MarkerLayerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "data_bounds": [
+          [
+            40.74238470000001,
+            -73.73844410000001
+          ],
+          [
+            40.742404700000016,
+            -73.7384241
+          ]
+        ],
+        "markers": [
+          "IPY_MODEL_1a68b1dcdadd4216a78816fab2828242"
+        ]
+      }
+    },
+    "14fb7a51403a4b108b914fa76e5e0062": {
       "model_name": "LayoutModel",
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.0.0",
@@ -25,7 +58,7 @@
         "width": "100%"
       }
     },
-    "37f7e7eb269341efb70ef1a16e091a62": {
+    "a1d5beb16e2d41fbaaed9af6b322c149": {
       "model_name": "PlainmapModel",
       "model_module": "jupyter-gmaps",
       "model_module_version": "0.8.2",
@@ -36,56 +69,56 @@
         },
         "data_bounds": [
           [
-            40.759011,
-            -73.98447220000003
+            40.74238470000001,
+            -73.73844410000004
           ],
           [
-            40.8075355,
-            -73.96257270000001
+            40.742404700000016,
+            -73.73842409999997
           ]
         ],
         "initial_viewport": {
           "type": "DATA_BOUNDS"
         },
         "layers": [
-          "IPY_MODEL_5e1a90c2710e424aba00030f1deea535"
+          "IPY_MODEL_87e802bf70084003b2971cafff5f6846"
         ],
-        "layout": "IPY_MODEL_8e6d61f2dff546a0accf2e316c3d2811"
+        "layout": "IPY_MODEL_14fb7a51403a4b108b914fa76e5e0062"
       }
     },
-    "80e7b1174bd94746b443d0b8f7e2256b": {
+    "bb8d3d6cba094750903f2f00b5ebbe54": {
       "model_name": "LayoutModel",
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.0.0",
       "state": {}
     },
-    "6c10bada75304bfab323d5663ca7b559": {
+    "d360da32b2c74608bf94e289f0849633": {
       "model_name": "ToolbarModel",
       "model_module": "jupyter-gmaps",
       "model_module_version": "0.8.2",
       "state": {
         "_dom_classes": [],
         "layer_controls": [],
-        "layout": "IPY_MODEL_80e7b1174bd94746b443d0b8f7e2256b"
+        "layout": "IPY_MODEL_bb8d3d6cba094750903f2f00b5ebbe54"
       }
     },
-    "eca4efad11314451902f74fde1465007": {
+    "07b4cecd87a0460c8d4c5f2130ac50a9": {
       "model_name": "LayoutModel",
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.0.0",
       "state": {}
     },
-    "4c2eec80de8e4199bc51ef2f3932355a": {
+    "354f951664e84a928ac42b17aee32b34": {
       "model_name": "ErrorsBoxModel",
       "model_module": "jupyter-gmaps",
       "model_module_version": "0.8.2",
       "state": {
         "_dom_classes": [],
         "errors": [],
-        "layout": "IPY_MODEL_eca4efad11314451902f74fde1465007"
+        "layout": "IPY_MODEL_07b4cecd87a0460c8d4c5f2130ac50a9"
       }
     },
-    "2023c7f5179447c1882710a49f55de25": {
+    "cf17854207c14e0380542cbee9aafb22": {
       "model_name": "LayoutModel",
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.0.0",
@@ -93,50 +126,23 @@
         "height": "420px"
       }
     },
-    "7b23b7c39b58448cbd48fce98246064e": {
+    "cd4dfad3e139467c8d21d1052622bcdc": {
       "model_name": "FigureModel",
       "model_module": "jupyter-gmaps",
       "model_module_version": "0.8.2",
       "state": {
         "_dom_classes": [],
-        "_errors_box": "IPY_MODEL_4c2eec80de8e4199bc51ef2f3932355a",
-        "_map": "IPY_MODEL_37f7e7eb269341efb70ef1a16e091a62",
-        "_toolbar": "IPY_MODEL_6c10bada75304bfab323d5663ca7b559",
-        "layout": "IPY_MODEL_2023c7f5179447c1882710a49f55de25"
-      }
-    },
-    "5e1a90c2710e424aba00030f1deea535": {
-      "model_name": "DirectionsLayerModel",
-      "model_module": "jupyter-gmaps",
-      "model_module_version": "0.8.2",
-      "state": {
-        "data_bounds": [
-          [
-            40.759011,
-            -73.9844722
-          ],
-          [
-            40.8075355,
-            -73.9625727
-          ]
-        ],
-        "end": [
-          40.759011,
-          -73.9844722
-        ],
-        "start": [
-          40.8075355,
-          -73.9625727
-        ],
-        "stroke_color": "#0088ff",
-        "waypoints": []
+        "_errors_box": "IPY_MODEL_354f951664e84a928ac42b17aee32b34",
+        "_map": "IPY_MODEL_a1d5beb16e2d41fbaaed9af6b322c149",
+        "_toolbar": "IPY_MODEL_d360da32b2c74608bf94e289f0849633",
+        "layout": "IPY_MODEL_cf17854207c14e0380542cbee9aafb22"
       }
     }
   }
 }
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
-{"version_major": 2, "version_minor": 0, "model_id": "7b23b7c39b58448cbd48fce98246064e"}
+{"version_major": 2, "version_minor": 0, "model_id": "cd4dfad3e139467c8d21d1052622bcdc"}
 </script>
 
 </body>
