--- a/export.html
+++ b/export.html
@@ -16,40 +16,7 @@
   "version_major": 2,
   "version_minor": 0,
   "state": {
-    "1a68b1dcdadd4216a78816fab2828242": {
-      "model_name": "MarkerModel",
-      "model_module": "jupyter-gmaps",
-      "model_module_version": "0.8.2",
-      "state": {
-        "display_info_box": true,
-        "info_box_content": "\n    <dl>\n    <dt>Event Name</dt><dd>rangers' choice: fire making skills</dd>\n    <dt>Event Borough</dt>Queens</dd>\n    <dt>Event Location</dt>Alley Pond Park: Alley Springfield BBQ Area Pink   </dd>\n    <dt>Event Type</dt>Special Event</dd>\n    <dt>Event Borough</dt>Queens</dd>\n    <dt>Event Start</dt>Sun Dec 16 18:00:00 2018</dd>\n    <dt>Event End</dt>Sun Dec 16 19:30:00 2018</dd>\n    </dl>\n    ",
-        "location": [
-          40.74239470000001,
-          -73.73843409999999
-        ]
-      }
-    },
-    "87e802bf70084003b2971cafff5f6846": {
-      "model_name": "MarkerLayerModel",
-      "model_module": "jupyter-gmaps",
-      "model_module_version": "0.8.2",
-      "state": {
-        "data_bounds": [
-          [
-            40.74238470000001,
-            -73.73844410000001
-          ],
-          [
-            40.742404700000016,
-            -73.7384241
-          ]
-        ],
-        "markers": [
-          "IPY_MODEL_1a68b1dcdadd4216a78816fab2828242"
-        ]
-      }
-    },
-    "14fb7a51403a4b108b914fa76e5e0062": {
+    "ac2bc00bce1040058288063475b18c74": {
       "model_name": "LayoutModel",
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.0.0",
@@ -58,7 +25,7 @@
         "width": "100%"
       }
     },
-    "a1d5beb16e2d41fbaaed9af6b322c149": {
+    "4d96d693aa124079b524e172ae1d6884": {
       "model_name": "PlainmapModel",
       "model_module": "jupyter-gmaps",
       "model_module_version": "0.8.2",
@@ -69,56 +36,56 @@
         },
         "data_bounds": [
           [
-            40.74238470000001,
-            -73.73844410000004
+            40.759011,
+            -73.98447220000003
           ],
           [
-            40.742404700000016,
-            -73.73842409999997
+            40.8075355,
+            -73.96257270000001
           ]
         ],
         "initial_viewport": {
           "type": "DATA_BOUNDS"
         },
         "layers": [
-          "IPY_MODEL_87e802bf70084003b2971cafff5f6846"
+          "IPY_MODEL_15c757c200ad49c5b98c6313170ec957"
         ],
-        "layout": "IPY_MODEL_14fb7a51403a4b108b914fa76e5e0062"
+        "layout": "IPY_MODEL_ac2bc00bce1040058288063475b18c74"
       }
     },
-    "bb8d3d6cba094750903f2f00b5ebbe54": {
+    "68d75c0740384b3183cbecc33ded254b": {
       "model_name": "LayoutModel",
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.0.0",
       "state": {}
     },
-    "d360da32b2c74608bf94e289f0849633": {
+    "804280d441734ec19f6fb60bfa31dd61": {
       "model_name": "ToolbarModel",
       "model_module": "jupyter-gmaps",
       "model_module_version": "0.8.2",
       "state": {
         "_dom_classes": [],
         "layer_controls": [],
-        "layout": "IPY_MODEL_bb8d3d6cba094750903f2f00b5ebbe54"
+        "layout": "IPY_MODEL_68d75c0740384b3183cbecc33ded254b"
       }
     },
-    "07b4cecd87a0460c8d4c5f2130ac50a9": {
+    "cb0b3aba40a34f93969c5d78f64f6946": {
       "model_name": "LayoutModel",
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.0.0",
       "state": {}
     },
-    "354f951664e84a928ac42b17aee32b34": {
+    "a8cda009e01b4cd3a447b3f0a4fd6d56": {
       "model_name": "ErrorsBoxModel",
       "model_module": "jupyter-gmaps",
       "model_module_version": "0.8.2",
       "state": {
         "_dom_classes": [],
         "errors": [],
-        "layout": "IPY_MODEL_07b4cecd87a0460c8d4c5f2130ac50a9"
+        "layout": "IPY_MODEL_cb0b3aba40a34f93969c5d78f64f6946"
       }
     },
-    "cf17854207c14e0380542cbee9aafb22": {
+    "918ae61d06974e63b0d8cbfb90c41065": {
       "model_name": "LayoutModel",
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.0.0",
@@ -126,23 +93,50 @@
         "height": "420px"
       }
     },
-    "cd4dfad3e139467c8d21d1052622bcdc": {
+    "8d663ae5c4974f15939ce278ee690058": {
       "model_name": "FigureModel",
       "model_module": "jupyter-gmaps",
       "model_module_version": "0.8.2",
       "state": {
         "_dom_classes": [],
-        "_errors_box": "IPY_MODEL_354f951664e84a928ac42b17aee32b34",
-        "_map": "IPY_MODEL_a1d5beb16e2d41fbaaed9af6b322c149",
-        "_toolbar": "IPY_MODEL_d360da32b2c74608bf94e289f0849633",
-        "layout": "IPY_MODEL_cf17854207c14e0380542cbee9aafb22"
+        "_errors_box": "IPY_MODEL_a8cda009e01b4cd3a447b3f0a4fd6d56",
+        "_map": "IPY_MODEL_4d96d693aa124079b524e172ae1d6884",
+        "_toolbar": "IPY_MODEL_804280d441734ec19f6fb60bfa31dd61",
+        "layout": "IPY_MODEL_918ae61d06974e63b0d8cbfb90c41065"
+      }
+    },
+    "15c757c200ad49c5b98c6313170ec957": {
+      "model_name": "DirectionsLayerModel",
+      "model_module": "jupyter-gmaps",
+      "model_module_version": "0.8.2",
+      "state": {
+        "data_bounds": [
+          [
+            40.759011,
+            -73.9844722
+          ],
+          [
+            40.8075355,
+            -73.9625727
+          ]
+        ],
+        "end": [
+          40.759011,
+          -73.9844722
+        ],
+        "start": [
+          40.8075355,
+          -73.9625727
+        ],
+        "stroke_color": "#0088ff",
+        "waypoints": []
       }
     }
   }
 }
 </script>
 <script type="application/vnd.jupyter.widget-view+json">
-{"version_major": 2, "version_minor": 0, "model_id": "cd4dfad3e139467c8d21d1052622bcdc"}
+{"version_major": 2, "version_minor": 0, "model_id": "8d663ae5c4974f15939ce278ee690058"}
 </script>
 
 </body>
